<resources>
    <string name="app_name">ACAE APP</string>
    <string name="title_activity_pedido">Pedido</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="star">Yes</string>


    <string name="update">ACTUALIZAR</string>
    <string name="cancel">CANCELAR</string>
    <string name="name">Está seguro de continuar con el proceso?</string>
    <string name="update_records">DESEA ACTUALIZAR LA APLICACION?</string>
    <string name="buscar_actualizaciones">Buscar Actualizaciones</string>


    <string name="app_name_download">Download APK</string>
    <string name="downloading">Downloading...</string>
    <string name="title_file_download">APK is downloading</string>
    <string name="storage_access_required">Storage access is required to downloading the file.</string>
    <string name="storage_permission_denied">Storage permission request was denied.</string>
    <string name="ok">OK</string>
    <string name="detalle_de_cliente">DETALLE DE CLIENTE</string>
    <string name="codigo">CODIGO</string>
    <string name="nombre">NOMBRE</string>
    <string name="telefono1">TELEFONO1</string>
    <string name="telefono2">TELEFONO2</string>
    <string name="direcci_n">DIRECCIÓN</string>
    <string name="depto">DEPTO</string>
    <string name="municipio">MUNICIPIO</string>
    <string name="datos_crediticios">DATOS CREDITICIOS</string>
    <string name="d_u_i">D.U.I</string>
    <string name="dui">DUI</string>
    <string name="n_i_t">N.I.T</string>
    <string name="nit">NIT</string>
    <string name="n_r_c">N.R.C</string>
    <string name="nrc">NRC</string>
    <string name="estado_crediticio">ESTADO CREDITICIO</string>
    <string name="balance">BALANCE</string>
    <string name="balance2">BALANCE</string>
    <string name="limite">LIMITE</string>
    <string name="limite_de_credito">LIMITE DE CREDITO</string>
    <string name="plazo">PLAZO</string>
    <string name="plazo_de_credito">PLAZO DE CREDITO</string>
    <string name="ver_pagar">VER PAGARÉ</string>
    <string name="activo">ACTIVO</string>
    <string name="codigo2">CODIGO</string>
    <string name="descripcion">DESCRIPCION</string>
    <string name="detalle_del_producto">DETALLE DEL PRODUCTO</string>
    <string name="detalle_de_cuentas">DETALLE DE CUENTAS</string>
    <string name="total_de_cuentas">TOTAL DE CUENTAS</string>


    <string name="acae_app">ACAE APP</string>
    <string name="men_principal">MENÚ PRINCIPAL</string>
    <string name="historico_pedido">HISTÓRICO DE PEDIDOS</string>
    <string name="token">TOKENS</string>
    <string name="cerrar_sesi_n">CERRAR SESIÓN</string>


    <string name="navigation_drawer_open">OPEN</string>
    <string name="navigation_drawer_close">CLOSE</string>

    <string name="menu_principal">MENÚ PRINCIPAL</string>
    <string name="logo_sismantec">Logo_sismantec</string>
    <string name="crear_token">CREAR TOKEN</string>
    <string name="boton_de_regreso">Boton de Regreso</string>
    <string name="vendedor">VENDEDOR</string>
    <string name="producto">PRODUCTO</string>
    <string name="contrase_a">CONTRASEÑA</string>
    <string name="cancelar_token">CANCELAR TOKEN</string>
    <string name="crear_token2">CREAR TOKEN</string>
    <string name="nombre_del_vendedor">BUSCAR VENDEDOR</string>
    <string name="nombre_del_producto">BUSCAR PRODUCTO</string>
    <string name="precio">PRECIO</string>
    <string name="simboloDolar">$</string>
    <string name="qwerty1234">QWERTY1234</string>
    <string name="_0_0000">0.0000</string>
    <string name="error_titulo">INFORMACIÓN</string>
    <string name="error_aceptar">ACEPTAR</string>
    <string name="historico_de_pedidos">HISTORICO DE PEDIDOS</string>
    <string name="regresar">Regresar</string>
    <string name="date_default">1900/01/01</string>
    <string name="titulo_msj_informacion">INFORMACIÓN</string>
    <string name="btn_salir">SALIR</string>
    <string name="no_registros">SIN DATOS QUE MOSTRAR</string>
    <string name="realizar_busqueda">REALIZAR BUSQUEDA</string>
    <string name="detalle_del_pedido">DETALLE DEL PEDIDO</string>
    <string name="usuario">USUARIO</string>
    <string name="server">SERVIDOR / IP</string>
    <string name="puerto">PUERTO</string>
    <string name="desea_firmar_el_pagar">¿Desea Firmar el Pagaré?</string>
    <string name="firmar_pagar">CLIENTE SIN PAGARÉ FIRMADO</string>
    <string name="aceptar">ACEPTAR</string>
    <string name="cancelar">CANCELAR</string>
    <string name="listado_de_clientes_nuevo_pedido">LISTADO DE CLIENTES (NUEVO PEDIDO)</string>
    <string name="listado_de_clientes">LISTADO DE CLIENTES</string>
    <string name="listado_de_clientes_cxc">LISTADO DE CLIENTES (CxC)</string>
    <string name="imgregresar">imgRegresar</string>
    <string name="nuevo_pedido">NUEVO PEDIDO</string>
    <string name="pedido">PEDIDO</string>
    <string name="tipo_envio">TIPO ENVIO</string>
    <string name="documento">DOCUMENTO</string>
    <string name="no_tiene_sucursal_registrada">NO TIENE SUCURSAL REGISTRADA</string>
    <string name="sucursal">SUCURSAL</string>
    <string name="nombre_del_cliente">NOMBRE DEL CLIENTE</string>
    <string name="ruta">RUTA</string>
    <string name="encomienda">ENCOMIENDA</string>
    <string name="factura">FACTURA</string>
    <string name="credito_fiscal">CREDITO FISCAL</string>
    <string name="factura_exportacion">FACTURA EXPORTACION</string>
    <string name="no_tiene_sucursal_registrada_">NO TIENE SUCURSAL REGISTRADA</string>
    <string name="agregar_producto">AGREGAR PRODUCTO</string>
    <string name="codigo_">CODIGO:</string>
    <string name="descripcion_">DESCRIPCION:</string>
    <string name="unidad_">UNIDAD</string>
    <string name="precio_">PRECIO</string>
    <string name="existencias_">EXISTENCIAS UNI.</string>
    <string name="total_">TOTAL</string>
    <string name="agregar_a_pedido">AGREGAR A PEDIDO</string>
    <string name="eliminar_producto">ELIMINAR PRODUCTO</string>
    <string name="_1_00">1</string>
    <string name="cantidad">CANTIDAD</string>
    <string name="btnregresar">btnRegresar</string>
    <string name="carga_de_datos">CARGA DE DATOS</string>
    <string name="imgcliente">imgCliente</string>
    <string name="clientes_y_sucursales">CLIENTES Y SUCURSALES</string>
    <string name="imgCuentas">imgCuentas</string>
    <string name="cuentas_por_cobrar">CUENTAS POR COBRAR</string>
    <string name="Inventario">INVENTARIO</string>
    <string name="borrar_pedidos_antiguos">BORRAR PEDIDOS ANTIGUOS</string>
    <string name="autorizaci_n_de_precios">AUTORIZACIÓN DE PRECIOS</string>
    <string name="imgpago">imgPago</string>
    <string name="detalle_de_pago">DETALLE DE PAGO</string>
    <string name="efectivo">PAGO</string>
    <string name="total">TOTAL</string>
    <string name="cambio">CAMBIO</string>
    <string name="fecha">FECHA</string>
    <string name="num_factura">NUM. FACTURA</string>
    <string name="detalle_de_cuentas_vencidas">DETALLE CUENTAS VENCIDAS</string>
    <string name="detalle_de_cuentas_vigentes">DETALLE CUENTAS VIGENTES</string>
    <string name="cliente_en_mora">CLIENTE EN MORA</string>
    <string name="punto_de_venta">PUNTO DE VENTA</string>
    <string name="numero_orden">N° ORDEN</string>
    <string name="configuracion">CONFIGURACION</string>
    <string name="btnatras">btnAtras</string>
    <string name="reportes">REPORTES</string>
    <string name="nuevo_abono">NUEVO ABONO</string>
    <string name="lista_de_abonos">LISTA DE ABONOS</string>
    <string name="listado_de_cuentas_nuevo_abono">LISTADO DE CUENTAS (NUEVO ABONO)</string>
    <string name="listado_de_cuentas">LISTADO DE CUENTAS</string>
    <string name="nuevo_abono_CXC">NUEVO ABONO</string>
    <string name="cancelar_proceso">CANCELAR PROCESO</string>
    <string name="cliente">CLIENTE</string>
    <string name="forma_de_pago">FORMA DE PAGO</string>
    <string name="monto_del_abono">MONTO DEL ABONO</string>
    <string name="ingresar_abono">INGRESAR ABONO</string>
    <string name="banco">BANCO</string>
    <string name="n_cuenta">N° CUENTA</string>
    <string name="n_cheque">N° CHEQUE</string>
    <string name="sin_sucursal">SIN SUCURSAL</string>
    <string name="reportes_menu">REPORTES</string>
    <string name="remisi_n">REMISIÓN</string>
    <string name="reporte_de_liquidaci_n_diaria">REPORTE DE LIQUIDACIÓN DIARIA</string>
    <string name="nuevo_cliente">Nuevo Cliente</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gastos_diarios">GASTOS DIARIOS</string>
    <string name="lista_de_gastos">LISTA DE GASTOS</string>
    <string name="sincronizar_datos">SINCRONIZAR DATOS</string>
    <string name="nuevo_gasto">NUEVO GASTO</string>
    <string name="nuevo_gasto_">NUEVO GASTO</string>
    <string name="solicitud_de_carga">SOLICITUD DE CARGA</string>
    <string name="nueva_solicitud">NUEVA SOLICITUD</string>
    <string name="actualizar_inventario">ACTUALIZAR INVENTARIO</string>
    <string name="_2">NUEVA SOLICITUD DE CARGA</string>
    <string name="productos_agregados">PRODUCTOS AGREGADOS</string>
    <string name="clienteinfo">ClienteInfo</string>
    <string name="recibo">RECIBO</string>
    <string name="abonos_cxc">ABONOS CxC</string>
    <string name="logo_server">logo_server</string>
    <string name="datos_de_conexi_n">DATOS DE CONEXIÓN</string>
    <string name="informacioncliente">InformacionCliente</string>
</resources>