<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/nav_pedido"
            android:icon="@drawable/historial_pedido"
            android:title="@string/historico_pedido"
            />
    </group>
    <group android:id="@+id/group_carga">
        <item android:id="@+id/nav_carga"
            android:title="@string/solicitud_de_carga"
            android:icon="@drawable/ic_solicitud_carga"/>
        <item android:id="@+id/nav_devolucion"
            android:title="DEVOLUCIONES"
            android:icon="@drawable/ic_devoluciones"/>
    </group>
    <group android:id="@+id/group_admin">
        <item
            android:id="@+id/nav_token"
            android:icon="@drawable/token"
            android:title="@string/autorizaci_n_de_precios"
            />
    </group>
    <group android:id="@+id/group_gasto">
        <item
            android:id="@+id/nav_gasto"
            android:icon="@drawable/ic_gastos"
            android:title="@string/gastos_diarios"/>
    </group>
    <group android:id="@+id/group_reporte">
        <item
            android:id="@+id/nav_reporte"
            android:icon="@drawable/ic_reporte"
            android:title="@string/reportes"/>
    </group>
    <group android:id="@+id/group_configuracion">
        <item
            android:id="@+id/nav_configuracion"
            android:icon="@drawable/ic_config"
            android:title="@string/configuracion"/>
    </group>
    <group>
        <item
            android:id="@+id/nav_salir"
            android:icon="@drawable/logout"
            android:title="@string/cerrar_sesi_n"
            />
    </group>
</menu>