<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/recicler"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgregarProductoSolicitud">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="0dp"
        android:layout_height="55dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/btnAtras"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:layout_marginStart="@dimen/margin_8dp"
                android:contentDescription="@string/imgregresar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_arrow_back_24"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvFormulario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default_16dp"
        android:elevation="5dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView4"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/margin_default_16dp">

            <TextView
                android:id="@+id/txttituloproducto"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/agregar_producto"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/moderado"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/textView25"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/codigo_"
                android:textAlignment="textStart"
                android:textColor="@color/colordark"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/margin_default_16dp"
                android:layout_marginEnd="@dimen/margin_8dp"
                app:layout_constraintTop_toBottomOf="@id/txttituloproducto"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/txtcodigo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="TextView"
                android:textAlignment="textStart"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/margin_default_16dp"
                android:layout_marginStart="@dimen/margin_8dp"
                app:layout_constraintTop_toBottomOf="@id/txttituloproducto"
                app:layout_constraintStart_toEndOf="@id/textView25"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/textView27"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/descripcion_"
                android:textColor="@color/colordark"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/margin_8dp"
                android:layout_marginEnd="@dimen/margin_8dp"
                app:layout_constraintTop_toBottomOf="@id/textView25"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/txtdescripcion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="TextView"
                android:textSize="16sp"
                android:textAlignment="textStart"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/margin_8dp"
                android:layout_marginStart="@dimen/margin_8dp"
                app:layout_constraintTop_toBottomOf="@id/txtcodigo"
                app:layout_constraintStart_toEndOf="@id/textView27"
                app:layout_constraintEnd_toEndOf="parent"/>

            <LinearLayout
                android:id="@+id/lySeleccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin_8dp"
                android:gravity="center_vertical"
                app:layout_constraintTop_toBottomOf="@id/txtdescripcion"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_4dp"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/tvExistencias"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/existencias_"
                        android:textColor="@color/colordark"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/lyExistencias"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:background="@drawable/spinner_bg">

                        <TextView
                            android:id="@+id/txtexistencia"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            tools:text="TextView"
                            android:textAlignment="center"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_4dp"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/tvEscala"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/precio_"
                        android:textColor="@color/colordark"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/lyEscala"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:background="@drawable/spinner_bg">

                        <TextView
                            android:id="@+id/tvPrecioProducto"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            tools:text="TextView"
                            android:textAlignment="center"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/lyPrecioExistencias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin_8dp"
                android:gravity="center_vertical"
                app:layout_constraintTop_toBottomOf="@id/lySeleccion"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_4dp"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/tvCantidadUni"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cantidad"
                        android:textAlignment="center"
                        android:textColor="@color/moderado"
                        android:textSize="16sp"
                        android:textStyle="bold"/>
                    <EditText
                        android:id="@+id/txtcantidad"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:background="@drawable/border_textbox"
                        android:inputType="number"
                        android:hint="@string/_1_00"
                        android:textAlignment="center"
                        android:textColor="@color/colordark"
                        android:textCursorDrawable="@drawable/black_cursor"
                        android:textSize="25sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_4dp"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/tvPrecio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/total_"
                        android:textColor="@color/colordark"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/lyPrecio"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:background="@drawable/spinner_bg">

                        <TextView
                            android:id="@+id/txttotal"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            tools:text="TextView"
                            android:textAlignment="center"
                            android:textColor="@color/moderado"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </LinearLayout>
            </LinearLayout>


            <Button
                android:id="@+id/btnagregar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_default_16dp"
                android:background="@drawable/border_btnenviar"
                android:text="AGREGAR A SOLICITUD"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lyPrecioExistencias"/>

            <Button
                android:id="@+id/btneliminar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_eliminarpedido"
                android:text="@string/eliminar_producto"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/margin_8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnagregar"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>