<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SolicitudCargaMenu">

    <LinearLayout
        android:id="@+id/lyEncabezado"
        android:layout_width="0dp"
        android:layout_height="@dimen/alturaEncabezados"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btnAtras"
            android:layout_width="@dimen/estandar_55dp"
            android:layout_height="@dimen/estandar_55dp"
            android:layout_margin="@dimen/margin_4dp"
            android:backgroundTint="@color/colorPrimary"
            android:contentDescription="@string/btnatras"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_4dp"
            android:layout_marginStart="@dimen/margin_4dp"
            android:text="SOLICITUD DE CARGA"
            android:textSize="@dimen/FuenteEncabezado"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/colorAccent" />

        <Button
            android:id="@+id/btnsincronizar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/margin_default_16dp"
            android:backgroundTint="@color/SEGUNDOCOLORLOGO"
            android:text="ACTUALIZAR"
            android:textColor="@color/colorAccent"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/titulo"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listaSolicitud"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_4dp"
        android:layout_marginBottom="@dimen/margin_4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lyEncabezado"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/actualizarInventario"
        android:layout_width="@dimen/estandar_55dp"
        android:layout_height="@dimen/estandar_55dp"
        android:layout_margin="@dimen/margin_default_16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/moderado"
        android:contentDescription="@string/actualizar_inventario"
        android:src="@drawable/ic_cargar_2"
        app:layout_constraintBottom_toTopOf="@id/nuevaSolicitud"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/nuevaSolicitud"
        android:layout_width="@dimen/estandar_55dp"
        android:layout_height="@dimen/estandar_55dp"
        android:backgroundTint="@color/btnVerde"
        android:layout_margin="@dimen/margin_default_16dp"
        android:contentDescription="@string/nueva_solicitud"
        android:src="@drawable/ic_baseline_add_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>